fix bugs on safari

--- a/src/_desktop.scss
+++ b/src/_desktop.scss
@@ -87,7 +87,6 @@
                 grid-column: 1 / span 2;
                 z-index: -1;
                 object-fit: cover;
-                height: 100%;
             }
             img:nth-of-type(6){
                 grid-row: 13 / span 3;
@@ -120,7 +119,6 @@
                 grid-column: -1 / span 1;
                 z-index: -1;
                 object-fit: cover;
-                height: 100%;
             }
             img:nth-of-type(13){
                 grid-row: 11 / span 3;
